# python-project-lvl2

./: .Makefile.swp  .README.md.swo  .gitignore  Makefile  README.md  pyproject.toml  testsss.py
.github/workflows/: GithubActions1.yml  github-actions-demo.yml  hexlet-check.yml
gendiff/: __init__.py
gendiff/diff_builder/: build_diff.py  generate_diff.py  parse.py
gendiff/formatter/: format_type.py  json.py  plain.py  reformat_data.py  stylish.py
gendiff/scripts/: gendiff.py
project/: __init__.py  formatter.py  generate_diff.py  parse.py
project/diff_builder/: build_diff.py  generate_diff.py  parse.py
project/formatter/: format_type.py  json.py  plain.py  stylish.py
project/scripts/: gendiff.py
tests/: test_generate_diff.py  test_parse.py
tests/fixtures/: result_json.json  result_plain2.json  result_test1.json  result_test2.json  result_test_yml4.yml
