[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["BaurNN <studentsoftpu@gmail.com>"]
packages = [
  { include = "project" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[tool.poetry.scripts]
gendiff = 'project.scripts.gendiff:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
