[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["BaurNN <studentsoftpu@gmail.com>"]
packages = [
  { include = "project" },
]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^5.2"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
gendiff = 'project.scripts.gendiff:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
